@@ -8,7 +8,10 @@ Zope Changes
 
     Bugs fixed
 
-      - fixed outdated transaction.commit(1) call in 
+      - Launchpad #245649:  the Products package is now a proper
+        "namespace package" under the rules specified by setuptools.
+
+      - Fixed outdated transaction.commit(1) call in 
         ZODBMountPoint.SimpleTrailblazer
 
       - Launchpad #239636:  Ensure that HEAD requests lock an empty body
